--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,11 @@
             <artifactId>browsermob-core</artifactId>
             <version>2.1.2</version>
         </dependency>
+        <dependency>
+            <groupId>com.asprise.ocr</groupId>
+            <artifactId>java-ocr-api</artifactId>
+            <version>15.3.0.3</version>
+        </dependency>
 
     </dependencies>
 
