--- a/pom.xml
+++ b/pom.xml
@@ -27,10 +27,20 @@
             <artifactId>browsermob-core</artifactId>
             <version>2.1.2</version>
         </dependency>
+        <!--<dependency>-->
+            <!--<groupId>com.asprise.ocr</groupId>-->
+            <!--<artifactId>java-ocr-api</artifactId>-->
+            <!--<version>15.3.0.3</version>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+        <!--    <groupId>org.bytedeco.javacpp-presets</groupId>-->
+        <!--    <artifactId>opencv</artifactId>-->
+        <!--    <version>3.1.0-1.2</version>-->
+        <!--</dependency>-->
         <dependency>
-            <groupId>com.asprise.ocr</groupId>
-            <artifactId>java-ocr-api</artifactId>
-            <version>15.3.0.3</version>
+            <groupId>org.openpnp</groupId>
+            <artifactId>opencv</artifactId>
+            <version>2.4.11-2</version>
         </dependency>
 
     </dependencies>
